force-app/main/default/objects/Lead_Assignment__c/Lead_Assignment__c.object-meta.xml
<CustomObject>
    <label>Lead Assignment</label>
    <pluralLabel>Lead Assignments</pluralLabel>
    <description>Lead Assignment</description>
    <nameField>
        <label>Lead Assignment Name</label>
        <type>AutoNumber</type>
        <displayFormat>LAS-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>