force-app/main/default/objects/Lead_Assignment__c/fields/Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Assigned_On__c</fullName>
    <label>Assigned On</label>
    <type>DateTime</type>
    <description>Assigned On</description>
</CustomField>