force-app/main/default/objects/Lead_Assignment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Assignments</relationshipLabel>
    <relationshipName>Lead_Assignments</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lead</description>
</CustomField>