force-app/main/default/objects/Lead_Assignment__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <label>Sales Representative</label>
    <type>Lookup</type>
    <referenceTo>Sales_Representative__c</referenceTo>
    <relationshipLabel>Lead Assignments</relationshipLabel>
    <relationshipName>Rep_Lead_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Representative</description>
</CustomField>