force-app/main/default/objects/Lead_Assignment__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Lead Assignments</relationshipLabel>
    <relationshipName>Territory_Lead_Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory</description>
</CustomField>